fix: resolve snapshot Optional handling and finalize ClimateSync 1.0.4 build